<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="default_notification_channel_id" translatable="false">uvstudentnotifchannelid</string>
    <string name="msg_token_fmt" translatable="false">Message token fmt</string>
    <string name="app_name">Cropestate Field User</string>
    <string name="resetpassword">Reset Password</string>
    <string name="title_explore">Explore</string>
    <string name="title_app">Univirtual</string>
    <string name="signin_message">Sign in to access quality tuition and materials</string>
    <string name="title_settings">Settings</string>
    <string name="title_accout">Account</string>
    <string name="title_enrolment">My Enrolments</string>
    <string name="title_achievements">Achievements</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="addreminder">Add Reminder</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_reply">Delete</string>
    <string name="country_prompt">Choose a Title</string>
    <string-array name="title_arrays">
        <item>None selected</item>
        <item>Prof.</item>
        <item>Dr.</item>
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss</item>
    </string-array>
    <string-array name="duration_arrays">
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string-array name="marital_arrays">
        <item>None selected</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>None selected</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="education_arrays">
        <item>None selected</item>
        <item>Basic</item>
        <item>Secondary</item>
        <item>Vocational/Technical</item>
        <item>Bachelors Degree</item>
        <item>Post Graduate</item>
    </string-array>
    <string name="search">Search...</string>
    <string name="emailaddress">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_timetable">Timetable</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="assignment">Assignment</string>
    <string name="upcoming">Upcoming Today</string>
    <string name="allmyclasses">All My Classes</string>
    <string name="expiredsubscriptions">Inactively Subscribed</string>
    <string name="activesubscriptions">Actively Subscribed</string>
    <string name="status">Status</string>
    <string name="score">Score</string>
    <string name="viewassignment">View Assignment</string>
    <string name="submitassignment">Submit Assignment</string>
    <string name="viewsubmitedassignment">View Submitted Assignment</string>
    <string name="topic">Topic</string>
    <string name="coursepath">Course path</string>
    <string name="website">Official Website</string>
    <string name="display">Display</string>
    <string name="logout">Logout</string>
    <string name="nightmode">Night mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="enterclass">Enter classroom</string>
    <string name="renewsubscription">Subscribe</string>
    <string name="ratecourse">Rate Course</string>
    <string name="unenroll">Unenroll</string>
    <string name="uploadmaterial">Click to upload</string>
    <string name="uploadmessage">Submit your course work by uploading using the button below</string>
    <string name="mypayments">My Recent Payments</string>
    <string name="inclass">In class</string>
    <string name="playback">Playback</string>
    <string name="selectoption">Select resource option</string>
    <string name="livechat">Class chat</string>
    <string name="classquiz">Class quiz</string>
    <string name="liveclass">Live class</string>
    <string name="classdocs">Class Documents</string>
    <string name="classsession">Class session</string>
    <string name="recordedclass">Recorded class</string>
    <string name="classdoc">Upcoming Class Document</string>
    <string name="classvideos">Class Videos</string>
    <string name="recordedaudio">Recorded Audio</string>
    <string name="description_delete_button">backspace</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="description_image_button_plus">plus</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="description_dialpad_back">Navigate back</string>
    <string name="description_dialpad_overflow">More options</string>
    <string name="read_file">This app needs access to your file storage so that it can read files.</string>
    <string name="openfile">Open file</string>
    <string name="askquestion">Ask question</string>
    <string name="speaker">Speaker</string>
    <string name="leaveclass">Leave class</string>
    <string name="endplayback">End playback</string>
    <string name="mute">Mute</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="keypad">Keypad</string>
    <string name="addcall">Add call</string>
    <string name="active">Active</string>
    <string name="rationale_doc_picker">We need this pemission to read documents from device.</string>
    <string name="title_learn">My Courses</string>
    <string name="messages">My Groups</string>
    <string name="cancel">Cancel</string>
    <string name="unmute">Unmute</string>
    <string name="sackfromclass">Sack student</string>
    <string name="contact">Phone number</string>
    <string name="createcourse">Create Course</string>
    <string name="duration">Duration :</string>
    <string name="enterstudentphone">Enter student phone number</string>
    <string name="go">Go</string>
    <string name="next">Next</string>
    <string name="almostdone">Almost done!</string>
    <string name="verifymobilenumber">Verify MTN mobile number</string>
    <string name="shortfreecall">A short, <b>free</b> call will soon be  placed to our system to verify your number</string>
    <string name="didntplacecall">Didn\'t receive call?</string>
    <string name="completeverification">Click to complete verification</string>
    <string name="changenumber">Change number</string>
    <string name="answerhere">Answer here ...</string>
    <string name="myquestions">My questions</string>
    <string name="typequestionhere">Type question here</string>
    <string name="possibleanswers">Possible answers</string>
    <string name="questionnumber">Question number :</string>
    <string name="newgroup">New group</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="startgroupcall">Start group call</string>
    <string name="startover">Clear group and start over</string>
    <string name="defaul_sim_msg"><u>Multi-sim detected. Please set default sim for calls before clicking next otherwise verification will fail</u></string>
    <string name="live_interactive">Live interactive class lessons from seasoned instructors</string>
    <string name="available_for_download">Live class lessons become available for download and you can follow at your own pace.</string>
    <string name="no_internet_required">No need to worry about poor internet connectivity where you are. Internet connectivity is only required to download course materials.</string>
    <string name="live">Live</string>
    <string name="recorded">Recorded</string>
    <string name="internet">Internet</string>
    <string name="get_started">Get Started</string>
    <string name="pending_verification">Pending verification</string>
    <string name="almost_done">Almost done!</string>
    <string name="retry_in">Retry in :</string>
    <string name="retry">Retry</string>
    <string name="error_contacting_server">Error contacting server. Please try again</string>
    <string name="assignment_date">Assignment Date</string>
    <string name="verification_failed">Verification failed!</string>
    <string name="number_cannot_be_used">This number cannot be used because it is linked to a teacher account.</string>
    <string name="unsubmitted">Unsubmitted</string>
    <string name="my_groups">My Groups</string>
    <string name="inviting_to_class">Inviting to class...</string>
    <string name="locking_student">Locking student...</string>
    <string name="unlocking_student">Unlocking student..</string>
    <string name="success">Success!</string>
    <string name="kicking_out_student">Kicking student out ...</string>
    <string name="successfully_kicked_student_out">Successfully kicked student out ...</string>
    <string name="kick_action_failed_for_user">Kick action failed for user</string>
    <string name="student_not_in_class">Student not in class ...</string>
    <string name="muting_student">Muting student</string>
    <string name="successfully_muted_student">Successfully muted student</string>
    <string name="unmuting_student">Unmuting student ...</string>
    <string name="successfully_unmuted_student">Successfully unmuted student</string>
    <string name="administrator">ADMINISTRATOR</string>
    <string name="renew_subscription">Renew Subscription</string>
    <string name="subscribe">Subscribe</string>
    <string name="seconds">seconds</string>
    <string name="feching_data">Fetching data ...</string>
    <string name="call_timed_out">Call timed out</string>
    <string name="placing_call_failed">Placing call failed. Default sim may not have been set.</string>
    <string name="click_to_add_to_group">Click on any student below to add to group</string>
    <string name="no_unsubmitted_assignments">You currently have no unsubmitted assignments.</string>
    <string name="no_submitted_assignments">You currently have no submitted assignments.</string>
    <string name="unmute_call">Unmute call</string>
    <string name="call_muted">Call muted</string>
    <string name="successfully_locked_student">Successfully locked student</string>
    <string name="resume_call">Resume call</string>
    <string name="call_paused">Call paused</string>
    <string name="call_resumed">Call resumed</string>
    <string name="pause">Pause</string>
    <string name="description">Description</string>
    <string name="about_instructor">About instructor</string>
    <string name="offered_by">Offered by</string>
    <string name="enrol">Enrol</string>
    <string name="courses">Courses</string>
    <string name="_246104545">246104545</string>
    <string name="please_enter_your_mtn_number">Please enter your MTN number</string>
    <string name="previous">Previous</string>
    <string name="grant_permission_to_use_this_app_as_the_default_calling_app">In order for this app to function, please grant permission to use this app as the default calling app when asked to</string>
</resources>