<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_concave_50"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"

        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/welcomemsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/almostdone"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView

            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Student"
            android:textColor="#AA0015"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="12dip"
            android:text="@string/title_learn"
            android:textSize="16dp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dip"
            android:text="Teachers"
            android:textSize="16dp"

            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/verifymobilenumber"
        android:textColor="#000"
        android:textSize="16dp" />

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"

        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/callverify"
        android:textSize="16dp" />-->

    <Button
        android:id="@+id/completeverificationbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_gradient"
        android:text="@string/completeverification"
        android:textColor="#FFFFFF"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/retry_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/didntplacecall"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resendbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/roundededittext"
                android:text="Retry"
                android:textColor="#676767"
                android:textStyle="bold" />

            <Button
                android:id="@+id/changenumberbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/roundededittext"
                android:text="@string/changenumber"
                android:textColor="#676767"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

