<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    android:background="@drawable/bg_convex"
tools:context=".activity.PhoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_square"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@color/transparent"
            android:padding="16dp"
            android:src="@drawable/left" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="0.5"
            android:text="@string/selectoption"
            android:layout_marginRight="56dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/actual_white" />

    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/actual_white"
            android:text="@string/classsession" />

        <LinearLayout
            android:id="@+id/quiz"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/classquiz"
                android:textColor="@color/actual_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/notepad" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/livechat"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/livechat"
                android:textColor="@color/actual_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_chat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liveclass"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/liveclass"
                android:textColor="@color/actual_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/liveicon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/classdocs"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/classdocs"
                android:textColor="@color/actual_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/docs" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recorded"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/recordedclass"
                android:textColor="@color/actual_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/audio_playist_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/upcomingdoc"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/classdoc"
                android:textColor="@color/actual_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/doc_white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/videos"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/classvideos"
                android:textColor="@color/actual_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/video_playist" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

</LinearLayout>
