<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_concave_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/welcomemsg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/grant_permission_to_use_this_app_as_the_default_calling_app"
                android:textColor="#000" />

        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/call_whole" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/please_enter_your_mtn_number"
        android:textColor="#000"
        android:textSize="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text=""
        android:textSize="16dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/phoneView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edge_white"
            android:drawablePadding="8dp"
            android:hint="@string/_246104545"
            android:textColorHint="#b3b3b3"
            android:inputType="phone"
            android:maxLength="9"
            android:textColor="#000"
            android:maxLines="1"
            android:paddingLeft="128dp"
            android:singleLine="true" />

        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            app:ccp_enableHint="false" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bg_gradient"
            android:text="@string/previous"
            android:textColor="#FFFFFF"
            android:visibility="gone" />

        <Button
            android:id="@+id/nextpagebtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_gradient"
            android:elevation="8dp"
            android:text="@string/next"
            android:textColor="#FFFFFF" />

    </LinearLayout>

   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="In order for this app to function, please grant permission to use this app as the default calling app when asked"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/multiplesimtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/defaul_sim_msg"
            android:textAlignment="center"
            android:textColor="#5F0000" />
    </RelativeLayout>

</LinearLayout>

